js/js.translator/testData/incremental/invalidation/inlineFunctionDefaultParamsWithCrossModuleInliner/lib1/l1.3.kt
inline fun foo(x: Int = 88, y: Int = 22) = 42 + x
